5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1618_2934.log
== TEST (2019-04-02 11:21:14) 
-- CODE:
a = float(input("valor investido: "))
b = float(input("taxa de rendimento: "))
from math import *
y = log(qf) - log(a) / b
print(int(y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = log(qf) - log(a) / b
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:24:27) 
-- CODE:
a = float(input("valor investido: "))
b = float(input("taxa de rendimento: "))
from math import *
c = a*3
y = log(c) - log(a) / b
print(int(y))
-- OUTPUT:
-44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:28:08) 
-- CODE:
a = float(input("valor investido: "))
b = float(input("taxa de rendimento: "))
from math import *
c = a*3
y = c - a / b
print(int(y))
-- OUTPUT:
-1085
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:28:22) 
-- CODE:
a = float(input("valor investido: "))
b = float(input("taxa de rendimento: "))
from math import *
c = a*3
y = c - a / b
print(int(y))
-- OUTPUT:
-1085
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:30:49) 
-- CODE:
a = float(input("valor investido: "))
b = float(input("taxa de rendimento: "))
from math import *
c = a*3
y = log(c) - log(a) / b
print(int(y))
-- OUTPUT:
-44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:39:27) 
-- CODE:
vi = float(input("valor investido: "))
r = float(input("taxa de rendimento: "))
from math import *
vf = vi*3
y = log(vf) - log(vi) / r
print(int(y))
-- OUTPUT:
-44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:45:22) 
-- CODE:
vi = float(input("valor investido: "))
r = float(input("taxa de rendimento: "))
from math import *
vf = vi*3
y = log(vf) - log(vi) / r
log(vf) = (22*0.05) - log(123.0)
print(int(log(vf)))

-- ERROR:
File "XXXX", line 6
    log(vf) = (22*0.05) - log(123.0)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:46:33) 
-- CODE:
vi = float(input("valor investido: "))
r = float(input("taxa de rendimento: "))
from math import *
vf = log(vi)*3
y = log(vf) - log(vi) / r
print(int(y))

-- OUTPUT:
-47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:47:44) 
-- CODE:
vi = float(input("valor investido: "))
r = float(input("taxa de rendimento: "))
from math import *
vf = log(vi)*3
y = log(vf) - log(vi) / r
print(int(y + 1))

-- OUTPUT:
-46
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:49:29) 
-- CODE:
vi = float(input("valor investido: "))
r = float(input("taxa de rendimento: "))
from math import *
vf = vi*3
y = (log(vf) - log(vi)) / r
print(int(y))

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:50:26) 
-- CODE:
vi = float(input("valor investido: "))
r = float(input("taxa de rendimento: "))
from math import *
vf = vi*3
y = (log(vf) - log(vi)) / r
print(int(y + 1))

-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:50:42) 
-- CODE:
vi = float(input("valor investido: "))
r = float(input("taxa de rendimento: "))
from math import *
vf = vi*3
y = (log(vf) - log(vi)) / r
print(int(y + 1))

-- EXECUTION TIME:
0.165813
-- TEST CASE 1:
---- input:
155.0
0.10
---- correct output:
11
---- user output:
11
-- TEST CASE 2:
---- input:
123.3
0.33
---- correct output:
4
---- user output:
4
-- TEST CASE 3:
---- input:
111.1
0.11
---- correct output:
10
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
